--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saturn Software development</title>
-    <link rel="stylesheet" href="https://github.com/AlExAnDeR-AnAyA/MI_Web/blob/main/css/Mi_Web.css">
+    <link rel="stylesheet" href="/css/Mi_Web.css">
     
 </head>
 <body>
