--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <header>
         <h1>Eduin Alexander Anaya Gómez</h1>
         <div class="social-icons">
-            <a href="#" class="icon"><img src="C:\Users\alexm\OneDrive\Documents\Miweb\Iconos_redes\facebook.png" alt="Facebook"></a>
-            <a href="#" class="icon"><img src="C:\Users\alexm\OneDrive\Documents\Miweb\Iconos_redes\whatsapp.png" alt="whatsapp"></a>
-            <a href="#" class="icon"><img src="C:\Users\alexm\OneDrive\Documents\Miweb\Iconos_redes\instagram.png" alt="Instagram"></a>
-            <a href="#" class="icon"><img src="C:\Users\alexm\OneDrive\Documents\Miweb\Iconos_redes\github.png" alt="Github"></a>
+            <a href="#" class="icon"><img src="Iconos_redes\facebook.png" alt="Facebook"></a>
+            <a href="#" class="icon"><img src="Iconos_redes\whatsapp.png" alt="whatsapp"></a>
+            <a href="#" class="icon"><img src="Iconos_redes\instagram.png" alt="Instagram"></a>
+            <a href="#" class="icon"><img src="Iconos_redes\github.png" alt="Github"></a>
         </div>
 
         <div class="logo"><img src="imagenes/Logo_Saturn.png" alt="Logo"></div>
 
         <nav>
-            <a href="C:\Users\alexm\OneDrive\Documents\Miweb\html\proyectos.html">Proyectos</a>
-            <a href="C:\Users\alexm\OneDrive\Documents\Miweb\html\servicios.html">Servicios</a>
-            <a href="C:\Users\alexm\OneDrive\Documents\Miweb\html\contacto.html">Contacto</a>
-            <a href="C:\Users\alexm\OneDrive\Documents\Miweb\html\Formulario.html">Registro</a>
-            <a href="C:\Users\alexm\OneDrive\Documents\Miweb\html\inicio_sesion.html">Inicio Sesion</a>
+            <a href="html\proyectos.html">Proyectos</a>
+            <a href="html\servicios.html">Servicios</a>
+            <a href="html\contacto.html">Contacto</a>
+            <a href="html\Formulario.html">Registro</a>
+            <a href="html\inicio_sesion.html">Inicio Sesion</a>
         </nav>
         <hr>
         <div class="header"><div class="scrolling-tex">Mi Portafolio de Proyectos y Servicios</div></div>
@@ -59,8 +59,8 @@
             </div>
             <div class="proyecto-container">
                 <h2>Sistemas</h2>
-                <img src="C:\Users\alexm\OneDrive\Documents\Miweb\imagenes\image.png" alt="">
-                <img src="C:\Users\alexm\OneDrive\Documents\Miweb\imagenes\imajen_catalogo.jpg" alt="">
+                <img src="imagenes\image.png" alt="">
+                <img src="imagenes\imajen_catalogo.jpg" alt="">
                 <p>Se esta desarrollando un sistema (POS) para tiendas de barrio y pequeños comercios en los <br>
                 municipios donde se dificulta el acceso a grandes servicios por los altos costos.</p>
     
@@ -68,7 +68,7 @@
 
             <div class="juegos-container">
                 <h2>Juegos</h2>
-                <img src="C:\Users\alexm\OneDrive\Documents\Miweb\imagenes\spacecraft-441708_1280.jpg" alt="">
+                <img src="imagenes\spacecraft-441708_1280.jpg" alt="">
                 <p>Se empezó con un diseño de juego interactivo de rol de programador en el espacio exterior <br>
                     para enseñar a los participantes inicialmente lenguajes de programación como JavaScript y <br>
                     HTML, desarrollando su conocimiento y practicando con diferentes situaciones donde <br>
